--- a/reactfire-chat/reactfire-chat-app/firebase.json
+++ b/reactfire-chat/reactfire-chat-app/firebase.json
@@ -3,6 +3,11 @@
     "rules": "database.rules.json"
   },
   "hosting": {
-    "public": "build"
+    "public": "build",
+    "ignore": [
+      "firebase.json",
+      "database-rules.json",
+      "storage.rules"
+    ]
   }
 }
